[gd_scene load_steps=27 format=3 uid="uid://d2gp1dbwx1wdj"]

[ext_resource type="Texture2D" uid="uid://bqnuc26vom4bv" path="res://Assets/inimigos/inimigo1/Idle.png" id="1_a1xoq"]
[ext_resource type="Script" path="res://Níveis/Nível1/inimigo_1.gd" id="1_ewo05"]
[ext_resource type="Texture2D" uid="uid://me3ihp8vfgwg" path="res://Assets/inimigos/inimigo1/Walk.png" id="3_4lqhr"]
[ext_resource type="Texture2D" uid="uid://dpogxj2bidkms" path="res://Assets/inimigos/inimigo1/Shot_1.png" id="3_ps7l4"]
[ext_resource type="PackedScene" uid="uid://c1e6hqp7yidse" path="res://Assets/inimigos/inimigo1/ataque/projectile.tscn" id="5_lq8vd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1idlb"]
atlas = ExtResource("1_a1xoq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_04b5e"]
atlas = ExtResource("1_a1xoq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgk8f"]
atlas = ExtResource("1_a1xoq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvfo6"]
atlas = ExtResource("1_a1xoq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqdyu"]
atlas = ExtResource("1_a1xoq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnwf0"]
atlas = ExtResource("1_a1xoq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aory"]
atlas = ExtResource("1_a1xoq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nikd"]
atlas = ExtResource("3_ps7l4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_05m08"]
atlas = ExtResource("3_ps7l4")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v4q2"]
atlas = ExtResource("3_ps7l4")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g737j"]
atlas = ExtResource("3_ps7l4")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd723"]
atlas = ExtResource("3_4lqhr")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ov2x"]
atlas = ExtResource("3_4lqhr")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_78pqa"]
atlas = ExtResource("3_4lqhr")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_424dp"]
atlas = ExtResource("3_4lqhr")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4m0j"]
atlas = ExtResource("3_4lqhr")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq0nk"]
atlas = ExtResource("3_4lqhr")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj0o6"]
atlas = ExtResource("3_4lqhr")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yla2x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1idlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04b5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgk8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvfo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqdyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnwf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aory")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nikd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05m08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v4q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g737j")
}],
"loop": true,
"name": &"shot1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd723")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ov2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78pqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_424dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4m0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq0nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj0o6")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxhbb"]
size = Vector2(34, 63.3571)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4ghj"]
size = Vector2(371, 78.25)

[node name="Inimigo1" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_ewo05")
projectile_scene = ExtResource("5_lq8vd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(16, -31)
scale = Vector2(1.4, 1.359)
sprite_frames = SubResource("SpriteFrames_yla2x")
animation = &"shot1"
frame_progress = 0.859789

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.96046e-08, 7.35)
scale = Vector2(1.4, 1.4)
shape = SubResource("RectangleShape2D_uxhbb")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, -20.875)
shape = SubResource("RectangleShape2D_i4ghj")

[node name="projectile" parent="." instance=ExtResource("5_lq8vd")]
position = Vector2(29, 529)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
